css/common.css
/* ... */
nav h1 {
  flex-grow: 1;
  font-size: 22px;
  font-weight: 500;
}

nav .menu {
  display: flex;
  gap: 12px;
  margin-right: 18px;
}

nav .menu li a {
  display: block;
  padding: 6px;
  font-size: 11px;
}

nav .menu li:hover a {
  color: var(--color-link);
}

nav .menu li.active a {
  opacity: .5;
  cursor: default;
}

nav .menu li.active:hover a {
  color: var(--color-font);
}

/* Hero */
.hero {
  background-color: var(--color-section);
}

.hero .inner {
  padding-bottom: 110px;
}

.hero h1 {
  background-image: url(../images/hero_ipad_text.png);
  width: 221px;
  height: 91px;
  position: absolute;
  transform: translate(624px, 235px);
  z-index: 1;
}

.hero .figures {
  height: 808px;
}

.hero figure {
  transform: translate(74px, -64px);
}

.hero figure .caption-camera {
  width: 120px;
  height: 84px;
  background-image: url("../images/hero_ipad_caption_camera.png");
  transform: translate(43px, 580px);
}

.hero figure .caption-chip {
  width: 95px;
  height: 43px;
  background-image: url("../images/hero_ipad_caption_chip.png");
  transform: translate(589px, 510px);
}

.hero figure .caption-storage {
  width: 80px;
  height: 43px;
  background-image: url("../images/hero_ipad_caption_storage.png");
  transform: translate(627px, 631px);
}

.hero h2 {
  background-image: url("../images/hero_headline.png");
  width: 738px;
  height: 145px;
  margin: 0 auto;
}

.hero p.pricing {
  margin-top: 40px;
  font-size: 24px;
  font-weight: 600;
  text-align: center;
}

.hero p.description {
  width: 88%;
  margin: 18px auto 0;
  font-size: 19px;
  text-align: center;
}

.hero .links {
  margin-top: 30px;
}


/* POWER / MULTIPLE APPS */
.power {
  margin-top: 110px;
}

.power .multiple-apps h1 {
  background-image: url("../images/power_headline.png");
  width: 500px;
  height: 280px;
  transform: translate(104px, 0);
}

.power .multiple-apps .figures {
  height: 773px;
}

.power .multiple-apps figcaption {
  width: 138px;
  height: 46px;
  background-image: url("../images/power_multiple_apps_caption.png");
  transform: translate(703px, -47px);
}

/* POWER / ARCADE */

.power .arcade {
  margin-top: 55px;
}

.power .arcade .figures {
  height: 600px;
}

.power .arcade figure {
  transform: translate(-347px, -90px);
}

.power .arcade figcaption {
  width: 150px;
  height: 77px;
  background-image: url("../images/power_arcade_caption.png");
  transform: translate(483px, 653px);
}

/* POWER / CAREATE */

.power .create {
  margin-top: 55px;
}

.power .create .figures {
  height: 772px;
}

.power .create figure {
  transform: translate(-25px, 50px);
}

.power .create figcaption {
  width: 142px;
  height: 46px;
  background-image: url("../images/power_create_caption.png");
  transform: translate(543px, 908px);
}

/* DISPALY */
.display {
  margin-top: 450px;
}

/* DISPALY / Notes */
.display .notes h1 {
  width: 630px;
  height: 370px;
  background-image: url("../images/display_headline.png");
  transform: translate(104px, 0);
}

.display .notes .figures {
  height: 814px;
  margin-top: 20px;
}

.display .notes figcaption {
  width: 145px;
  height: 45px;
  background-image: url("../images/display_notes_caption.png");
  transform: translate(707px, -16px);
}

/* DISPALY / Shareplay */
.display .shareplay {
  margin-top: 55px;
}

.display .shareplay .figures {
  height: 630px;
}

.display .shareplay figure {
  transform: translate(-360px, 0);
}

.display .shareplay figcaption {
  width: 110px;
  height: 48px;
  background-image: url("../images/display_shareplay_caption.png");
  transform: translate(300px, 658px);
}

/* CAMERA */

.camera {
  margin-top: 303px;
}

/* CAMERA / Stage */
.camera .stage {
  position: relative;
}
.camera .stage h1 {
  width: 650px;
  height: 450px;
  transform: translate(-25px, 0);
  background-image: url("../images/camera_headline.png");
}

.camera .stage .info {
  position: absolute;
  top: 150px;
  right: 0;
}

.camera .stage .figures {
  height: 770px;
  margin-top: 24px;
}

.camera .stage figure {
  transform: translate(90px, 0);
}

.camera .stage figure video {
  position: absolute;
  top: 36px;
  left: 76px;
  -webkit-mask-image: url(../images/camera_video_mask.png);
  mask-image: url(../images/camera_video_mask.png);
}

.camera .stage .controller--play,
.camera .stage .controller--pause {
  color: var(--color-link);
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 8px;
  transform: translate(428px, -134px) rotate(-3deg);
}

.camera .stage .controller--play:hover,
.camera .stage .controller--pause:hover {
  text-decoration: underline;
}

.camera .stage .controller--play.hide,
.camera .stage .controller--pause.hide {
  display: none;
}

.camera .stage .controller--play img,
.camera .stage .controller--pause img {
  width: 20px;
  margin-top: -2px;
}

.camera .stage figcaption {
  width: 130px;
  height: 110px;
  background-image: url("../images/camera_hardware_caption.png");
  transform: translate(-116px, 383px);
}

/* CAMERA / Edit */
.camera .edit .figures {
  height: 910px;
}

.camera .edit figure {
  transform: translate(20px, 0);
}

.camera .edit figcaption {
  width: 130px;
  height: 47px;
  background-image: url("../images/camera_edit_caption.png");
  transform: translate(27px, 905px);
}

/* WIRELESS */
.wireless {
  margin-top: 202px;
}

/* WIRELESS / FACETIME */
.wireless .facetime h1 {
  width: 730px;
  height: 330px;
  background-image: url("../images/wireless_headline.png");
  transform: translate(104px, 0);
}

.wireless .facetime .figures {
  height: 773px;
}

.wireless .facetime figure {
  transform: translate(-68px, 0);
}

.wireless .facetime figcaption {
  width: 130px;
  height: 46px;
  background-image: url("../images/wireless_facetime_caption.png");
  transform: translate(843px, -49px);
}

/* WIRELESS / FILES */
.wireless .files figure {
  transform: translate(34px, -34px);
}
/* ... */

